<resources>
    <string name="app_name">BookSearch</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="ISBN" translatable="false">ISBN</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="empty_search_error">At least one search field must contain information</string>
    <string name="url_null_error">Error handling request. Try again later</string>
    <string name="invalid_json">Error handling request. Try again with more specific search</string>
    <string name="no_results">No results</string>
    <string name="content_description">Image of the book cover</string>
</resources>
