<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:id="@+id/title_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:layout_marginTop="20dp"
        android:id="@+id/author_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISBN"
        android:layout_marginTop="20dp"
        android:id="@+id/isbn_edit_text"/>

<android.support.v7.view.menu.ActionMenuItemView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</LinearLayout>

